#1 •	Update Nav component so that it is sticky to the top when the user scrolls down the page •	Update the App component to remove the user info from local storage when user signs out •	Create a ProfileInfoForm and update the ProfileInfo page to display the ProfileInfoForm component •	Update the ProfileInfoForm component to display the profile info form or friend preferences form based on what action is occurring •	Update the friend preferences page on the ProfileInfoForm to display a Google API map with a Map component •	Update the Map component so that it includes a dynamic Circle component that's radius changes based on the form inputs •	Update ProfileInfoForm to be styled dynamically for mobile and desktop •	Ensure next button acts as type submit and only allows the user to move forward if all required areas of form(s) have been filled out •	 Ensure the previous button is only visible on the friend preference form and allows the user to go back to the previous form without interruptions •	Ensure to store the Google API key in the env file, update webpack.config

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -26,6 +26,16 @@ button {
   font-size: 20px;
 }
 
+.form-font-sm {
+  font-size: 15px;
+}
+
+.small-header {
+  font-family: Raleway, sans-serif;
+  line-height: 150%;
+  font-size: 30px;
+}
+
 .danger {
   color: #ab1716;
 }
